--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,34 @@
 # Application
-web/app/plugins/*
-!web/app/plugins/.gitkeep
-web/app/mu-plugins/*/
-web/app/upgrade
-web/app/uploads/*
-!web/app/uploads/.gitkeep
+/web/app/backups/*/
+#/web/app/plugins/*/
+#!/web/app/plugins/.gitkeep/
+#/web/app/mu-plugins/*/
+/web/app/upgrade/
+/web/app/uploads/*/
+!/web/app/uploads/.gitkeep
+/web/app/cache/
 
 # WordPress
-web/wp
-web/.htaccess
+/web/wp
+/web/.htaccess
 
 # Dotenv
-.env
-.env.*
-!.env.example
+/.env
+/.env.*
+!/.env.example
 
 # Composer
-vendor/*
-!vendor/.gitkeep
+/vendor/
+!/vendor/.gitkeep
+
+/.htaccess
+/license.txt
+/readme.html
+/sitemap.xml
+/sitemap.xml.gz
+
+*.log
+/.idea/
+/web/app/uploads/mc4wp-debug-log.php
+/web/mysql-search-and-replace/
+/web/snr/
