--- a/web/app/themes/kim-theme/resources/assets/config.json
+++ b/web/app/themes/kim-theme/resources/assets/config.json
@@ -9,7 +9,7 @@
     ]
   },
   "publicPath": "/app/themes/kim-theme",
-  "devUrl": "https://kimheyman.dev",
+  "devUrl": "http://kimheyman.test",
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]",
   "watch": [
