--- a/web/app/themes/kim-theme/package.json
+++ b/web/app/themes/kim-theme/package.json
@@ -152,6 +152,7 @@
     "bootstrap": "^4.0.0-beta",
     "font-awesome": "~4.7",
     "jquery": "1.12.4 - 3",
-    "popper.js": "~1.11"
+    "popper.js": "~1.11",
+    "slick-carousel": "^1.8.1"
   }
 }
