--- a/web/app/themes/kim-theme/package.json
+++ b/web/app/themes/kim-theme/package.json
@@ -149,6 +149,7 @@
     "yargs": "~9.0.1"
   },
   "dependencies": {
+    "animate.css": "^3.6.1",
     "bootstrap": "^4.0.0-beta",
     "font-awesome": "~4.7",
     "jquery": "1.12.4 - 3",
